# exercise_01_intro

./: README.md  noxfile.py  pyproject.toml
src/: julia.py  my_code.py
src/fml_exercise_01_intro/: __init__.py  julia.py  my_code.py
tests/: test_mycode.py
